--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "deploy": "npm run build && wrangler pages deploy"
   },
   "dependencies": {
-    "hono": "^4.6.20"
+    "@emotion/styled": "^11.14.0",
+    "hono": "^4.6.20",
+    "typed-htmx": "^0.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
