--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "counter",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": ". ./.env && vite",
     "build": "vite build",
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy"
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "hono": "^4.6.20",
+    "postgres": "^3.4.5",
     "typed-htmx": "^0.3.1"
   },
   "devDependencies": {
